Fixed: HiddenPanelsPopup: Respect global scrollbar style (thin/normal)

--- a/src/styles/themes/proton/sidebar/bar.navigation.styl
+++ b/src/styles/themes/proton/sidebar/bar.navigation.styl
@@ -492,6 +492,8 @@
   padding: var(--nav-btn-margin)
   overflow: hidden
   overflow-y: auto
+#root[data-native-scrollbars-thin="true"] .NavigationBar .hidden-panels-popup-content
+  scrollbar-width: thin
 
 .NavigationBar
   .hidden-panels-enter-active
